Fix: Page Title & Font Color

--- a/FormulaTruckSeriesWebsite/Site.Master
+++ b/FormulaTruckSeriesWebsite/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title>Formula Indy Series - <%: Page.Title %></title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -23,9 +23,11 @@
             background-size: cover; /* Resize the background image to cover the entire container */
             background-color: #000000; /* Used if the image is unavailable */
             height: 100vh;
+            color: #fff;
         }
           body {
               background-color: #000000;
+              color: #fff;
           }
     </style>
 
